--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,12 @@ body {
     height: 100vh;
 }
 
-.login-container {
+/* .login-container {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0,1);
-}
+} */
 
 form {
     display: flex;
