--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
-    display: flex;
+    /* display: flex;
+    flex-direction: column; */
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* height: 50vh; */
 }
 
 /* .login-container {
@@ -39,3 +40,8 @@ button {
     cursor: pointer;
     margin-bottom: 10px;
 }
+
+/* .party-container {
+    overflow-y: auto;
+    height: 100vh;
+  } */
