feat: 초대장 링크 생성

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,11 @@ button {
     margin-bottom: 10px;
 }
 
+.party:hover {
+    background-color: #f0f0f0;
+    cursor: pointer; 
+}
+
 /* .party-container {
     overflow-y: auto;
     height: 100vh;
